Primera version de recibir datos del cliente y ejecutar una consulta sql, devolviendolas en un string

--- a/PPT-Juego-Servidor.csproj
+++ b/PPT-Juego-Servidor.csproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BDconexion.cs" />
+    <Compile Include="Models\Jugador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
